<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orden_de_arresto"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="top"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emitir_orden_de_arresto_contra"
                android:textSize="20sp"
                android:layout_marginTop="40dp"/>
                android:layout_gravity="top"/>

            <Spinner
                android:id="@+id/spinner_villanos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/emitir_orden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:onClick="emitirOrdenContra"
                android:background="@android:color/holo_orange_dark"
                android:textColor="@android:color/white"
                android:paddingRight="7sp"
                android:paddingLeft="7sp"
                android:text="@string/pedir_orden_de_arresto" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>